[TuanDN] Refactor model
